tests/error/case_not_const.gw
// [contains] value is not const. this is not allowed for now
int i;
switch(maybe) {
	case i:
}
